# latex-templates-frontend

./: pyproject.toml
src/: backend.py  main.py  routes.py  settings.py  template_page.jinja
src/dependencies/: backend.py  page.py  request.py  settings.py  state.py  template.py  trainslation.py  user.py  utils.py
src/pages/: main_page.py  page.py  registry.py
src/schemas/: user.py  workspace.py
src/static/css/: site.css
src/static/js/: highlight.min.js
src/templates/: create_template_form.jinja  create_tickets_set.jinja  create_workspace_form.html  file_input.html  index.html  logged.html  logged_navbar.jinja  login_error.html  login_form.html  main.jinja  participants.jinja  register_form.jinja  template.jinja  tickets_set.jinja  unlogged.html  unlogged_navbar.html  workspace_info.jinja
