[tool.poetry]
name = "diploma-front"
version = "0.1.0"
description = ""
authors = ["mihail8531 <mihail8531@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"
aiohttp = "^3.9.5"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
isort = "^5.13.2"
black = "^24.4.2"
pygount = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
